--- a/index.html
+++ b/index.html
@@ -4,15 +4,90 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Spotify Clone</title>
+    <link rel="stylesheet" href="/styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <!--DONE-->
+    <section class="header-container">
+      <header>
+        <img src="/images/spotify-logo.png" alt="Logo" />
+        <nav>
+          <ul>
+            <li><a href="#">Premium </a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Download</a></li>
+          </ul>
+        </nav>
+      </header>
+      <h1>Music for everyone.</h1>
+      <p>Spotify is now free on mobile, tablet and computer.</p>
+      <p>Listen to the right music, wherever you are.</p>
+    </section>
+    <!--DONE-->
+    <!--DONE-->
+    <!--DONE-->
+    <!--DONE-->
+
+    <!--DONE-->
+    <main class="container">
+      <h3>What’s on Spotify?</h3>
+      <div class="row">
+        <div class="col">
+          <img src="images/music-icon.png" alt="icon music" class="icon" />
+          <h5>Millions of Songs</h5>
+          <p>There are millions of songs on Spotify</p>
+        </div>
+        <div class="col">
+          <img
+            src="images/high-quality-icon.png"
+            alt="icon high quality"
+            class="icon"
+          />
+          <h5>HD Music</h5>
+          <p>Listen to music as if you were listening live</p>
+        </div>
+        <div class="col">
+          <img src="images/devices-icon.png" alt="icon devices" class="icon" />
+          <h5>Stream Everywhere</h5>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </div>
+    </main>
+
+    <!--DONE-->
+    <!--DONE-->
+    <!--DONE-->
+    <!--DONE-->
+    <!--DONE-->
+    <section class="container section-container">
+      <div class="col">
+        <h3>It’s as yeezy as Kanye West.</h3>
+        <div class="row">
+          <h5>Search</h5>
+          <p>Know what you want to listen to? Just search and hit play.</p>
+        </div>
+        <div class="row">
+          <h5>Browse</h5>
+          <p>
+            Check out the latest charts, brand new releases and great playlists
+            for right now.
+          </p>
+        </div>
+        <div class="row">
+          <h5>Discover</h5>
+          <p>
+            Enjoy new music every Monday with your own personal playlist. Or sit
+            back and enjoy Radio.
+          </p>
+        </div>
+      </div>
+      <div class="col col-img">
+        <img src="/images/spotify-app.jpg" alt="Music app" />
+      </div>
+    </section>
   </body>
 </html>
